force-app/main/default/objects/PMC_DH_CheckoutConfig__mdt/PMC_DH_CheckoutConfig__mdt.object-meta.xml
<CustomObject>
    <label>PMC_DH_CheckoutConfig</label>
    <pluralLabel>PMC_DH_CheckoutConfigs</pluralLabel>
</CustomObject>