force-app/main/default/objects/PMC_DH_CheckoutConfig__mdt/fields/PicklistAPI_Name__c.field-meta.xml
<CustomField>
    <fullName>PicklistAPI_Name__c</fullName>
    <label>PicklistAPI_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>